--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
                 <h2 class="grid-10 center">Eurasian League
                     Uzbekistan Tashkent</h2>
+                <h2 class="grid-10 center">Соревнования проводятся 7-9 апреля, Начало соревнований в 11:00ч</h2>
 
             </header>
 
